[gd_scene load_steps=8 format=3 uid="uid://cygtqvymouhov"]

[ext_resource type="LabelSettings" uid="uid://ct0id5dvd563e" path="res://assets/themes/title_settings.tres" id="1_k0spq"]
[ext_resource type="Script" uid="uid://bcnsyme4d4hj2" path="res://src/ui/components/settings/slider.gd" id="1_script"]
[ext_resource type="Theme" uid="uid://bn7q4ap7m5gdu" path="res://assets/themes/dcl_theme.tres" id="2_mryku"]
[ext_resource type="FontFile" uid="uid://0qlati8b2q8n" path="res://assets/themes/fonts/inter/inter_400.ttf" id="3_rg3ud"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_c03rv"]

[sub_resource type="Theme" id="Theme_eontw"]
Label/font_sizes/font_size = 23

[sub_resource type="LabelSettings" id="LabelSettings_m1jcl"]
font = ExtResource("3_rg3ud")
font_size = 30
font_color = Color(0.9882353, 0.9882353, 0.9882353, 1)

[node name="MasterVolume" type="VBoxContainer"]
size_flags_vertical = 4
theme_override_constants/separation = 0
alignment = 1
script = ExtResource("1_script")
title = "General"

[node name="HSeparator" type="HSeparator" parent="."]
layout_mode = 2
theme_override_constants/separation = 8
theme_override_styles/separator = SubResource("StyleBoxEmpty_c03rv")

[node name="TitleRow" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="TitleRow"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme = SubResource("Theme_eontw")
text = "General"
label_settings = ExtResource("1_k0spq")

[node name="ValueLabel" type="Label" parent="TitleRow"]
unique_name_in_owner = true
layout_mode = 2
theme = SubResource("Theme_eontw")
text = "50"
label_settings = SubResource("LabelSettings_m1jcl")
horizontal_alignment = 2

[node name="HSeparator2" type="HSeparator" parent="."]
layout_mode = 2
theme_override_constants/separation = 20
theme_override_styles/separator = SubResource("StyleBoxEmpty_c03rv")

[node name="HSlider" type="HSlider" parent="."]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("2_mryku")
value = 50.0

[node name="HSeparator3" type="HSeparator" parent="."]
layout_mode = 2
theme_override_constants/separation = 16
theme_override_styles/separator = SubResource("StyleBoxEmpty_c03rv")

[connection signal="drag_ended" from="HSlider" to="." method="_on_h_slider_drag_ended"]
[connection signal="value_changed" from="HSlider" to="." method="_on_h_slider_value_changed"]
